Fixed the email in contact section going off of the screen on mobile

--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -9,7 +9,7 @@ section#contact {
   .large {
     // Added to make the text white
     color: $white;
-    font-size: 2rem;
+    font-size: 1.5rem;
     // margin-bottom: 2rem;
   }
 
